<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgground"
    tools:context=".activity.SignUpActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_splash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/create_account"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/merriweatherbold"
                    android:text="@string/enter_your_details_to_get_registered"
                    android:textAlignment="center"
                    android:textColor="@color/grey_txt"
                    android:textSize="13sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/grey_txt"
                    app:boxBackgroundColor="@color/grey_light"
                    app:boxStrokeWidth="0dp"
                    app:endIconMode="clear_text"
                    app:helperTextTextColor="@color/purple_200"
                    app:startIconDrawable="@drawable/user"
                    app:startIconTint="@color/grey_txt">

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweatherregular"
                        android:hint="@string/user_name"
                        android:imeOptions="actionNext"

                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/grey_txt"
                    app:boxBackgroundColor="@color/grey_light"
                    app:boxStrokeWidth="0dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    app:endIconMode="clear_text"
                    app:helperTextTextColor="@color/purple_200"
                    app:startIconDrawable="@drawable/phone"
                    app:startIconTint="@color/grey_txt">

                    <EditText
                        android:id="@+id/etMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweatherregular"
                        android:hint="@string/mobile_number"
                        android:imeOptions="actionNext"

                        android:inputType="number"
                        android:maxLength="10"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/grey_txt"
                    app:boxBackgroundColor="@color/grey_light"
                    app:boxStrokeWidth="0dp"
                    app:endIconMode="clear_text"
                    app:helperTextTextColor="@color/purple_200"
                    app:startIconDrawable="@drawable/email"
                    app:startIconTint="@color/grey_txt">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweatherregular"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/grey_txt"
                    app:boxBackgroundColor="@color/grey_light"
                    app:boxStrokeWidth="0dp"
                    app:endIconMode="clear_text"
                    app:helperTextTextColor="@color/purple_200"
                    app:hintTextColor="@color/black"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/password"
                    app:startIconTint="@color/grey_txt">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweatherregular"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"

                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/cbRember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/merriweatherregular"
                android:text="@string/agree_to_all_terms_amp_conditions"
                android:textColor="@color/purple_200" />


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/gradient_btn"
                android:fontFamily="@font/merriweatherbold"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:backgroundTint="@null" />

            <TextView
                android:id="@+id/txLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/merriweatherregular"
                android:textAlignment="center"
                android:textColor="@color/grey_txt"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/merriweatherbold"
                android:gravity="center"
                android:text="@string/or_continue_with"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle_gradient">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        app:srcCompat="@drawable/gmail" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlFb"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle_gradient">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="15dp"
                        android:text="f"
                        android:textColor="@color/white"
                        android:textSize="27dp"
                        android:textStyle="bold" />
                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</RelativeLayout>