<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgground"
    tools:context=".activity.ForgotActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"

        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="?actionBarItemBackground"
                android:padding="15dp"
                app:srcCompat="@drawable/arrow_left"
                app:tint="@color/black" />


            <TextView
                android:id="@+id/tv_splash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_toEndOf="@+id/ivBack"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/forgot_pass"
                android:textColor="@color/black"
                android:textSize="18dp" />
        </RelativeLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:endIconMode="custom"
            app:helperTextTextColor="@color/purple_200"
            app:startIconDrawable="@drawable/email"
            app:boxStrokeWidth="0dp"
            android:layout_marginTop="35dp"
            app:startIconTint="@color/grey_txt"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxBackgroundColor="@color/grey_light"
            android:textColorHint="@color/grey_txt"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:fontFamily="@font/merriweatherregular"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                android:imeOptions="actionNext"
                android:id="@+id/etEmail" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/forgot"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:backgroundTint="@null"
            android:background="@drawable/gradient_btn"
            android:fontFamily="@font/merriweatherbold"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>